// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Characters/> Deveria ao buscar um characters que não existe mostrar uma mensagem que não foi encontrado 1`] = `
<div>
  <div
    class="sc-hpvRAK biGWKg"
    data-testid="id-container-characters"
  >
    <header
      class="sc-dbgcnz jqVckL"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-dSyItl kqPqMi"
      >
        <input
          class="sc-bkWJyw btAKAJ"
          data-testid="id-search-characters"
          placeholder="Digite para pesquisar o seu Herói da MARVEL favorito."
          type="text"
          value="batman"
        />
      </div>
    </header>
    <div
      class="sc-hUozzH"
    >
      Nenhum personagem encontrado
    </div>
  </div>
</div>
`;

exports[`<Characters/> Deveria buscar a partir da inicial do nome dos personagens 1`] = `
<div>
  <div
    class="sc-hpvRAK biGWKg"
    data-testid="id-container-characters"
  >
    <header
      class="sc-dbgcnz jqVckL"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-dSyItl kqPqMi"
      >
        <input
          class="sc-bkWJyw btAKAJ"
          data-testid="id-search-characters"
          placeholder="Digite para pesquisar o seu Herói da MARVEL favorito."
          type="text"
          value="H"
        />
      </div>
    </header>
    <div
      class="sc-fmMAES"
      data-testid="id-cards-characters"
    >
      <section
        class="sc-gZGWnS eTVhLD"
        data-testid="id-cards-container"
      >
        <div
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT efdGIg"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh hnyVce"
              data-testid="id-typograph-name-content"
            >
              Hulk
            </h2>
            <img
              alt="Imagem do personagem Hulk"
              class="sc-grJzXs cqACap"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </div>
      </section>
      <div
        class="sc-cLrhaH kYOzDC"
      >
        <button
          class="sc-jWWaec frwRuj"
        >
          Remover
        </button>
        <button
          class="sc-jWWaec frwRuj"
        >
          Adicionar Mais
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Characters/> Deveria buscar a partir do nome dos personagens 1`] = `
<div>
  <div
    class="sc-hpvRAK biGWKg"
    data-testid="id-container-characters"
  >
    <header
      class="sc-dbgcnz jqVckL"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-dSyItl kqPqMi"
      >
        <input
          class="sc-bkWJyw btAKAJ"
          data-testid="id-search-characters"
          placeholder="Digite para pesquisar o seu Herói da MARVEL favorito."
          type="text"
          value="Hulk"
        />
      </div>
    </header>
    <div
      class="sc-fmMAES"
      data-testid="id-cards-characters"
    >
      <section
        class="sc-gZGWnS eTVhLD"
        data-testid="id-cards-container"
      >
        <div
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT efdGIg"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh hnyVce"
              data-testid="id-typograph-name-content"
            >
              Hulk
            </h2>
            <img
              alt="Imagem do personagem Hulk"
              class="sc-grJzXs cqACap"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </div>
      </section>
      <div
        class="sc-cLrhaH kYOzDC"
      >
        <button
          class="sc-jWWaec frwRuj"
        >
          Remover
        </button>
        <button
          class="sc-jWWaec frwRuj"
        >
          Adicionar Mais
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Characters/> Deveria buscar os characters ao renderizar a aplicação 1`] = `
<div>
  <div
    class="sc-hpvRAK biGWKg"
    data-testid="id-container-characters"
  >
    <header
      class="sc-dbgcnz jqVckL"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-dSyItl kqPqMi"
      >
        <input
          class="sc-bkWJyw btAKAJ"
          data-testid="id-search-characters"
          placeholder="Digite para pesquisar o seu Herói da MARVEL favorito."
          type="text"
          value=""
        />
        <div
          class="sc-bfmpKG klRheD"
        >
          <svg
            class="sc-dMOoFv iNUuWF"
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 0 0-94.3-139.9 437.71 437.71 0 0 0-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </div>
      </div>
    </header>
    <div
      class="sc-fmMAES"
      data-testid="id-cards-characters"
    >
      <section
        class="sc-gZGWnS eTVhLD"
        data-testid="id-cards-container"
      >
        <div
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT efdGIg"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh hnyVce"
              data-testid="id-typograph-name-content"
            >
              3-D Man
            </h2>
            <img
              alt="Imagem do personagem 3-D Man"
              class="sc-grJzXs cqACap"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </div>
        <div
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT efdGIg"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh hnyVce"
              data-testid="id-typograph-name-content"
            >
              Hulk
            </h2>
            <img
              alt="Imagem do personagem Hulk"
              class="sc-grJzXs cqACap"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </div>
      </section>
      <div
        class="sc-cLrhaH kYOzDC"
      >
        <button
          class="sc-jWWaec frwRuj"
        >
          Remover
        </button>
        <button
          class="sc-jWWaec frwRuj"
        >
          Adicionar Mais
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Characters/> Deveria buscar os characters e listalos em cards na tela caso tenha characters 1`] = `
<div>
  <div
    class="sc-hpvRAK biGWKg"
    data-testid="id-container-characters"
  >
    <header
      class="sc-dbgcnz jqVckL"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-dSyItl kqPqMi"
      >
        <input
          class="sc-bkWJyw btAKAJ"
          data-testid="id-search-characters"
          placeholder="Digite para pesquisar o seu Herói da MARVEL favorito."
          type="text"
          value=""
        />
        <div
          class="sc-bfmpKG klRheD"
        >
          <svg
            class="sc-dMOoFv iNUuWF"
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 0 0-94.3-139.9 437.71 437.71 0 0 0-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </div>
      </div>
    </header>
    <div
      class="sc-fmMAES"
      data-testid="id-cards-characters"
    >
      <section
        class="sc-gZGWnS eTVhLD"
        data-testid="id-cards-container"
      >
        <div
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT efdGIg"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh hnyVce"
              data-testid="id-typograph-name-content"
            >
              3-D Man
            </h2>
            <img
              alt="Imagem do personagem 3-D Man"
              class="sc-grJzXs cqACap"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </div>
        <div
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT efdGIg"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh hnyVce"
              data-testid="id-typograph-name-content"
            >
              Hulk
            </h2>
            <img
              alt="Imagem do personagem Hulk"
              class="sc-grJzXs cqACap"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </div>
      </section>
      <div
        class="sc-cLrhaH kYOzDC"
      >
        <button
          class="sc-jWWaec frwRuj"
        >
          Remover
        </button>
        <button
          class="sc-jWWaec frwRuj"
        >
          Adicionar Mais
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Characters/> Deveria buscar todos os personagens caso a busca seja vazia 1`] = `
<div>
  <div
    class="sc-hpvRAK biGWKg"
    data-testid="id-container-characters"
  >
    <header
      class="sc-dbgcnz jqVckL"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-dSyItl kqPqMi"
      >
        <input
          class="sc-bkWJyw btAKAJ"
          data-testid="id-search-characters"
          placeholder="Digite para pesquisar o seu Herói da MARVEL favorito."
          type="text"
          value=" "
        />
      </div>
    </header>
    <div
      class="sc-fmMAES"
      data-testid="id-cards-characters"
    >
      <section
        class="sc-gZGWnS eTVhLD"
        data-testid="id-cards-container"
      >
        <div
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT efdGIg"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh hnyVce"
              data-testid="id-typograph-name-content"
            >
              3-D Man
            </h2>
            <img
              alt="Imagem do personagem 3-D Man"
              class="sc-grJzXs cqACap"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </div>
        <div
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT efdGIg"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh hnyVce"
              data-testid="id-typograph-name-content"
            >
              Hulk
            </h2>
            <img
              alt="Imagem do personagem Hulk"
              class="sc-grJzXs cqACap"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </div>
      </section>
      <div
        class="sc-cLrhaH kYOzDC"
      >
        <button
          class="sc-jWWaec frwRuj"
        >
          Remover
        </button>
        <button
          class="sc-jWWaec frwRuj"
        >
          Adicionar Mais
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Characters/> Deveria renderizar na tela os componentes container-characters, container-search-characters e searchCharacters 1`] = `
<div>
  <div
    class="sc-hpvRAK biGWKg"
    data-testid="id-container-characters"
  >
    <header
      class="sc-dbgcnz jqVckL"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-dSyItl kqPqMi"
      >
        <input
          class="sc-bkWJyw btAKAJ"
          data-testid="id-search-characters"
          placeholder="Digite para pesquisar o seu Herói da MARVEL favorito."
          type="text"
          value=""
        />
        <div
          class="sc-bfmpKG klRheD"
        >
          <svg
            class="sc-dMOoFv iNUuWF"
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 0 0-94.3-139.9 437.71 437.71 0 0 0-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </div>
      </div>
    </header>
    <div
      class="sc-hUozzH"
    >
      Nenhum personagem encontrado
    </div>
  </div>
</div>
`;
